# rfm

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml  requirements.txt  wiki.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-uat-account-dev.yml  deploy-uat.yml  quality.yml
bundle/jobs/: ing_set_rfm.yml
bundle/pipelines/: pln_rfm.yml  pln_rfm_gold.yml  pln_rfm_ingestion.yml
resources/config/rfm/: merchant_mapping.toml
src/rfm/common/: spark_conf.py
src/rfm/config/: merchant_mapping.py
src/rfm/transforms/: rfm_calc.py  sales.py  stats.py  txn_helpers.py  txn_range.py
tests/unit/: conftest.py  test_fact_mthly_rfm.py  test_mart_mthly_sales.py  test_mart_mthly_stats.py  test_mart_mthly_txn_range.py  test_merchant_mapping.py  test_spark_conf.py  test_txn_helpers.py
workflow/pln_rfm/transformations/: fact_txn_unified.py  rfm.py  stats_company.py  stats_gid.py  stats_group.py
workflow/pln_rfm/transformations/gold_mart/: fact_mthly_rfm.py  mart_mthly_sales.py  mart_mthly_stats.py  mart_mthly_txn_range.py
workflow/pln_rfm/utilities/: utils.py
